--- a/TodoList/Base.lproj/Main.storyboard
+++ b/TodoList/Base.lproj/Main.storyboard
@@ -172,6 +172,9 @@
                                 <frame key="frameInset" minX="133" minY="123" width="113" height="80"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Home Button" image="Home Button"/>
+                                <connections>
+                                    <action selector="homebuttonPressed:" destination="WYW-CA-zb1" eventType="touchUpInside" id="QMG-lU-450"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cR6-Nv-IgN">
                                 <frame key="frameInset" minX="254" minY="123" width="113" height="80"/>
